# chip8-emulator

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: components.h  display.h  instructions.h  memory.h  renderer.h  stack.h  timer.h
scripts/: cmake-run.sh  make-run.sh
src/: components.c  display.c  instructions.c  main.c  memory.c  renderer.c  stack.c  timer.c
